--- a/page/style.css
+++ b/page/style.css
@@ -196,7 +196,7 @@
 
 /* tab content */
 .wrapper_tabcontent {
-  height: 80vh;
+  height: 46rem;
   background-color: white;
   margin-top: 0px;
   z-index: -3;
@@ -205,7 +205,10 @@
   /* padding: 40px 60px; */
   overflow: hidden;
   transition: all 1s ease;
-  top: 0;
+  top: 45px;
+  /* width: 83rem; */
+  margin-left: 35px;
+
 }
 
 .tabcontent {
@@ -536,32 +539,43 @@ nav.sub-menu-open .nav-links .hover-el {
 
 /* 이미지캐러셀 */
 .imgcontainer{
-  width: 640px;
+  width: auto;
   margin: 0 auto;
 }
 .imgcontainer > h1{
   text-align: center;
 }
 .imgcontainer > .album{
-  height: 400px;
-  width: 640px;
+  height: 42rem;
+  width: 80rem;
   overflow: hidden;
+  margin-left: 10rem;
 }
 .imagesmain{
-  position: relative;
+  /* position: relative; */
   display: flex;
-  height: 400px;
+  height: 43rem;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  /* overflow: hidden; */
 }
-.imgcontainer > img{
-  width: 640px;
-  height: 400px;
+.imgcontainer > .album > .imagesmain > img{
+  width: 73rem;
+  height: 42rem;
+  /* position: absolute; */
+  margin-left: 3rem;
 }
 .imgcontainer > button, .imgcontainer >button:active, .imgcontainer > button:focus{
-  width: 100px; height: 30px;
+  width: 105px;
+  height: 40px;
   border: none;
   color: white;
   background-color: teal;
   outline: none;
+  font-size: 20px;
+  position: relative;
+  top: 18px;
 }
 .imgcontainer > button:hover{
   background-color: turquoise;
